--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <form action="/submit">
       <label>What pet do you have?</label>
-      <input type="radio" name="pet" id="dog" /><label for="cat"></label>
-      <input type="radio" name="pet" id="cat" />
+      <input type="radio" name="" id="dog" /><label for="cat"></label>
+      <input type="radio" name="" id="cat" /><label for="dog"></label>
       <div><input type="submit" value="sign up" /></div>
     </form>
   </body>
