--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   <body>
     <form action="/submit">
       <label>What pet do you have?</label>
-      <input type="radio" name="" id="dog" /><label for="cat"></label>
-      <input type="radio" name="" id="cat" /><label for="dog"></label>
+      <input type="radio" name="pets" id="dog" value="dog" /><label for="dog"
+        >dogs</label
+      >
+      <input type="radio" name="pets" id="cat" value="cat" /><label for="cat"
+        >cats</label
+      >
       <div><input type="submit" value="sign up" /></div>
     </form>
   </body>
